# sift-sim

./: .gitignore  BLOG_POST.md  README.md  pyproject.toml
sift/: __init__.py  __main__.py  detectors.py  report.py  scanner.py
tests/: test_sift.py
